[metadata]
name = django-graphics_token
version = 0.1
description = A pluggable Django app.
long_description = file: README.md
url = https://github.com/reuters-graphics/django-graphics-token/
author = Reuters Graphics
author_email = all.graphics@thomsonreuters.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0

[options.packages.find]
exclude =
    example
    staticapp